# skyfleet

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
Data/: features.csv  results.json  skyfleet_customer_queries.csv  skyfleet_drones.csv  skyfleet_payments.csv  skyfleet_rides.csv  skyfleet_weather.csv
api/: swagger.yml
src/: Dockerfile  predict.py  process_features.py  pyproject.toml
src/app/: __init__.py  containers.py  routes.py  services.py
src/client/: ollama.py
src/context/: context.py
src/preprocessing/: extract_features.py
src/recommendation/: recommender.py
src/tests/: test_preprocess_features.py  test_recommendation.py
