[tool.poetry]
name = "skyfleet"
version = "0.1.0"
description = ""
authors = ["me <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.3.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
flask = "^3.0.3"
dependency-injector = "^4.42.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
